--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/modernist@v0.2.0
+plugins:
+- jekyll-remote-theme
 title: Le Quan's homepage
 description: Bookmark this to keep an eye on my project updates!
